; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/extr_network.c___tcp_timer.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/extr_network.c___tcp_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tmr_callback = common dso_local global i32 0, align 4
@tcp_tmr = common dso_local global i64 0, align 8
@tcp_active_pcbs = common dso_local global i64 0, align 8
@tcp_tw_pcbs = common dso_local global i64 0, align 8
@tcp_timer_cntrl = common dso_local global i32 0, align 4
@net_tcp_ticks = common dso_local global i32 0, align 4
@tcp_timer_active = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @__tcp_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__tcp_timer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (...) @__lwp_thread_dispatchdisable()
  %4 = load i32, i32* @tmr_callback, align 4
  %5 = load i64, i64* @tcp_tmr, align 8
  %6 = inttoptr i64 %5 to i8*
  %7 = call i32 @net_callback(i32 %4, i8* %6)
  %8 = load i64, i64* @tcp_active_pcbs, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i64, i64* @tcp_tw_pcbs, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %10, %1
  %14 = load i32, i32* @net_tcp_ticks, align 4
  %15 = call i32 @__lwp_wd_insert_ticks(i32* @tcp_timer_cntrl, i32 %14)
  br label %17

16:                                               ; preds = %10
  store i32 0, i32* @tcp_timer_active, align 4
  br label %17

17:                                               ; preds = %16, %13
  %18 = call i32 (...) @__lwp_thread_dispatchunnest()
  ret void
}

declare dso_local i32 @__lwp_thread_dispatchdisable(...) #1

declare dso_local i32 @net_callback(i32, i8*) #1

declare dso_local i32 @__lwp_wd_insert_ticks(i32*, i32) #1

declare dso_local i32 @__lwp_thread_dispatchunnest(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
